[package]
name = "changesets"
version = "0.1.0"
authors = ["mitchellhamilton <mitchell@hamil.town>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.58"
eyre = "0.6.1"
dialoguer = "0.6"
cargo_metadata = "0.12.0"
enquirer = "0.4.0"
changesets_parse = { path = "../parse" }
human_id = "0.1.0"
clap = "3.0.0-beta.2"
semver = "0.11.0"